# LightningCast-Endpoint

./: CMakeLists.txt  LICENSE.md  LightningCastClient.cpp  LightningCastClient.h  LightningCastCommon.h  LightningCastDeviceSample.cpp  LightningCastServer.cpp  LightningCastServer.h  README.md  SnapcastComm.cpp  SnapcastComm.h  Util.cpp  Util.h  tinysvcmdns.cpp  tinysvcmdns.h
